# cpp-backend

./: prepare_test.sh
.github/workflows/: game_state.yml  join_game.yml  main.yml  task_test.yml  test_bookipedia.yml
bash/: bash_aliases  zprofile
notes/: task.cpp
sprint1/problems/: prepare_sln.sh
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.h  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  ingredients.h  main.cpp
sprint1/problems/cook/: CMakeLists.txt
sprint1/problems/cook/src/: main.cpp
sprint1/problems/final_task/solution/: Dockerfile
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_single_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/samples/http_server/: CMakeLists.txt
sprint1/samples/http_server/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt
sprint1/samples/tcp-udp/src/: tcp_client.cpp  tcp_server.cpp  udp_client.cpp
sprint2/examples/boost_log/: CMakeLists.txt  main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution_local_correct/: Dockerfile
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile  README.md  api_tests.http
sprint2/problems/join_game/solution/src/: application.cpp  application.h  boost_log.cpp  boost_log.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  player_manager.cpp  player_manager.h  request_handler.cpp  request_handler.h  request_handling.cpp  request_handling.h  server_logger.cpp  server_logger.h  tagged.h
sprint2/problems/join_game/solution/static/: abc..html  about.html  file with spaces.html  game.html  index.html
sprint2/problems/join_game/solution/static/js/: game.js  game_map.js  helper.js  three.js
sprint2/problems/join_game/solution/static/js/controls/: OrbitControls.js
sprint2/problems/join_game/solution/static/js/loaders/: FBXLoader.js  GLTFLoader.js  MTLLoader.js  OBJLoader.js
sprint2/problems/logger/solution/: CMakeLists.txt  my_logger.h
sprint2/problems/server_logging/: CMakeLists.txt
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: boost_log.cpp  boost_log.h  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  request_handler.h
sprint2/problems/server_logging/src/: boost_log.cpp  http_server.cpp  json_loader.h  main.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/static_content/solution/src/: main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/: CMakeLists.txt  Dockerfile  api.http  tests.http
sprint3/problems/find_return/solution_local/: Dockerfile
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gather/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: app_util.h  application.h  game_data.cpp  json_loader.h  loot_generator.h  model.cpp  request_handling.cpp  request_handling.h
sprint3/problems/gen_objects/solution/tests/: game_server_tests.cpp  model_tests.cpp
sprint3/problems/htmldecode/solution/: CMakeLists.txt
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp  htmldecode.h
sprint3/problems/instrumentation/precode/: CMakeLists.txt  report
sprint3/problems/instrumentation/precode/v0/: main.cpp
sprint3/problems/instrumentation/precode/v1/: log_duration.h  main.cpp
sprint3/problems/instrumentation/solution/: main.cpp  report
sprint3/problems/load/precode/: load.yaml
sprint3/problems/load/solution/: ammo.txt
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: app_util.h  application.cpp  application.h  game_data.h  http_server.cpp  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handling.cpp  request_handling.h  server_logger.h  state_serialization.h
sprint3/problems/scores/solution/tests/: game_server_tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint3/problems/urlencode/solution/: CMakeLists.txt
sprint3/problems/urlencode/solution/src/: urlencode.cpp
sprint3/problems/urlencode/solution/tests/: tests.cpp
sprint3/samples/boost_test/: CMakeLists.txt
sprint3/samples/boost_test/src/: leap_year.cpp  main.cpp
sprint3/samples/boost_test/tests/: boost_test_main.cpp
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/src/: bookypedia.cpp.orig  bookypedia.h  bookypedia.h.orig  main.cpp  main.cpp.orig
sprint4/problems/bookypedia-2/solution/src/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-2/solution/src/domain/: author.h  book.h  book_fwd.h
sprint4/problems/bookypedia-2/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-2/solution/src/ui/: view.cpp  view.h
sprint4/problems/bookypedia-2/solution/src/util/: tagged.h
sprint4/problems/bookypedia-2/solution/src_local/: main.cpp
sprint4/problems/bookypedia-2/solution/src_local/domain/: book.h
sprint4/problems/db_of_books/solution/: CMakeLists.txt  main.cpp
sprint4/problems/game_server_test_client/: CMakeLists.txt  main.cpp
sprint4/problems/leave_game/game_server_test_client/: CMakeLists.txt  main.cpp
(+156 files in other folders)
